switch to db @ vps009, and don't use CONCAT

--- a/LiiteriDataAPI/Web.config
+++ b/LiiteriDataAPI/Web.config
@@ -22,6 +22,7 @@
     <!--
     <add name="statisticIndexDB" connectionString="data source=C252;initial catalog=LiiteriStatisticsData;persist security info=True;user id=user1;password=foobar1234;MultipleActiveResultSets=True" />
     -->
-    <add name="statisticDataDB" connectionString="data source=C252;initial catalog=LiiteriDataMarts;persist security info=True;user id=user1;password=foobar1234;MultipleActiveResultSets=True" />
+    <!--<add name="statisticDataDB" connectionString="data source=C252;initial catalog=LiiteriDataMarts;persist security info=True;user id=user1;password=foobar1234;MultipleActiveResultSets=True" />-->
+    <add name="statisticDataDB" connectionString="data source=vps009.sitois.local\kotidw_dev;initial catalog=LiiteriDataMarts;persist security info=True;user id=liiteri;password=li7jbbGG14;MultipleActiveResultSets=True" />
   </connectionStrings>
 </configuration>
