--- a/LiiteriDataAPI/LiiteriDataAPI.csproj
+++ b/LiiteriDataAPI/LiiteriDataAPI.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -81,14 +82,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\IndexController.cs" />
+    <Compile Include="BaseFactory.cs" />
+    <Compile Include="Controllers\StatisticController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\StatisticIndexDetails.cs" />
+    <Compile Include="Models\StatisticsResult.cs" />
+    <Compile Include="StatisticIndexBriefFactory.cs" />
+    <Compile Include="StatisticIndexDetailsFactory.cs" />
+    <Compile Include="StatisticsResultFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegionLayer.cs" />
-    <Compile Include="StatisticIndexFinder.cs" />
+    <Compile Include="RegionType.cs" />
     <Compile Include="Models\StatisticIndexBrief.cs" />
   </ItemGroup>
   <ItemGroup>
