--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\ImportTool\packages.config" />
   <repository path="..\LiiteriDataAPI\packages.config" />
+  <repository path="..\LiiteriDataTests\packages.config" />
+  <repository path="..\LiiteriStatisticsAPI\packages.config" />
 </repositories>
