--- a/LiiteriDataAPI/Web.config
+++ b/LiiteriDataAPI/Web.config
@@ -5,6 +5,8 @@
   -->
 <configuration>
   <appSettings>
+    <add key="DbDataMarts" value="LiiteriDataMarts" />
+    <add key="DbDataIndex" value="LiiteriDataIndex" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -19,10 +21,8 @@
     </handlers>
   </system.webServer>
   <connectionStrings>
-    <!--
-    <add name="statisticIndexDB" connectionString="data source=C252;initial catalog=LiiteriStatisticsData;persist security info=True;user id=user1;password=foobar1234;MultipleActiveResultSets=True" />
-    -->
     <!--<add name="statisticDataDB" connectionString="data source=C252;initial catalog=LiiteriDataMarts;persist security info=True;user id=user1;password=foobar1234;MultipleActiveResultSets=True" />-->
     <add name="statisticDataDB" connectionString="data source=vps009.sitois.local\kotidw_dev;initial catalog=LiiteriDataMarts;persist security info=True;user id=liiteri;password=li7jbbGG14;MultipleActiveResultSets=True" />
+    <add name="LiiteriDB" connectionString="data source=vps009.sitois.local\kotidw_dev;persist security info=True;user id=liiteri;password=li7jbbGG14;MultipleActiveResultSets=True" />
   </connectionStrings>
 </configuration>
