Add basic indicator views and management

--- a/LiiteriDataAPI/LiiteriDataAPI.csproj
+++ b/LiiteriDataAPI/LiiteriDataAPI.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BaseFactory.cs" />
+    <Compile Include="Controllers\IndicatorController.cs" />
     <Compile Include="Controllers\StatisticController.cs" />
     <Compile Include="Controllers\ThemeController.cs" />
     <Compile Include="Global.asax.cs">
