Add initial statistics functionality with options for grouping and filtering

--- a/LiiteriDataAPI/LiiteriDataAPI.csproj
+++ b/LiiteriDataAPI/LiiteriDataAPI.csproj
@@ -83,6 +83,8 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BaseFactory.cs" />
+    <Compile Include="Binders\DateRangeModelBinder.cs" />
+    <Compile Include="Binders\IntegerArrayModelBinder.cs" />
     <Compile Include="Controllers\IndicatorController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Global.asax.cs">
