--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -41,19 +41,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factories\AreaFactory.cs" />
     <Compile Include="Factories\AreaTypeFactory.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Factories\BaseFactory.cs" />
+    <Compile Include="Factories\DataAreaTypeFactory.cs" />
     <Compile Include="Factories\IFactory.cs" />
     <Compile Include="Factories\IndicatorBriefFactory.cs" />
     <Compile Include="Factories\IndicatorDetailsFactory.cs" />
     <Compile Include="Factories\StatisticsResultFactory.cs" />
     <Compile Include="Factories\ThemeFactory.cs" />
     <Compile Include="Factories\TimePeriodFactory.cs" />
+    <Compile Include="Models\Area.cs" />
     <Compile Include="Models\AreaType.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Models\DataAreaType.cs" />
     <Compile Include="Models\ILiiteriEntity.cs" />
     <Compile Include="Models\ILiiteriMarker.cs" />
     <Compile Include="Models\IndicatorBrief.cs" />
@@ -63,10 +67,14 @@
     <Compile Include="Models\Theme.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\AnySqlQuery.cs" />
+    <Compile Include="Queries\AreaQuery.cs" />
+    <Compile Include="Queries\AreaTypeQuery.cs" />
     <Compile Include="Queries\IndicatorQuery.cs" />
     <Compile Include="Queries\SqlQuery.cs" />
     <Compile Include="Queries\StatisticsQuery.cs" />
     <Compile Include="Queries\ThemeQuery.cs" />
+    <Compile Include="Repositories\AreaRepository.cs" />
+    <Compile Include="Repositories\AreaTypeRepository.cs" />
     <Compile Include="Repositories\IndicatorBriefRepository.cs" />
     <Compile Include="Repositories\IndicatorDetailsRepository.cs" />
     <Compile Include="Repositories\IReadRepository.cs" />
