- areaTypes now arbitrary and manually managed (see AreaTypeMappings.xml) - add log4net to project

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\LiiteriDataAPI\packages.config" />
   <repository path="..\LiiteriDataTests\packages.config" />
   <repository path="..\LiiteriStatisticsAPI\packages.config" />
+  <repository path="..\LiiteriStatisticsCore\packages.config" />
 </repositories>
