--- a/LiiteriDataAPI/LiiteriDataAPI.csproj
+++ b/LiiteriDataAPI/LiiteriDataAPI.csproj
@@ -85,7 +85,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="BaseFactory.cs" />
     <Compile Include="Binders\DateRangeModelBinder.cs" />
     <Compile Include="Binders\IntegerArrayModelBinder.cs" />
     <Compile Include="Controllers\IndicatorController.cs" />
@@ -93,16 +92,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Region.cs" />
-    <Compile Include="Models\StatisticIndexDetails.cs" />
-    <Compile Include="Models\StatisticsResult.cs" />
-    <Compile Include="RegionFactory.cs" />
-    <Compile Include="StatisticIndexBriefFactory.cs" />
-    <Compile Include="StatisticIndexDetailsFactory.cs" />
-    <Compile Include="StatisticsResultFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegionType.cs" />
-    <Compile Include="Models\StatisticIndexBrief.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
@@ -118,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LiiteriStatisticsCore\LiiteriStatisticsCore.csproj">
