--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Repositories\SqlReadWriteRepository.cs" />
     <Compile Include="Repositories\StatisticsResultRepository.cs" />
     <Compile Include="Repositories\ThemeRepository.cs" />
+    <Compile Include="Util\DebugOutput.cs" />
     <Compile Include="Util\Range.cs" />
     <Compile Include="Util\AreaTypeMappings.cs" />
   </ItemGroup>
