increase query string limit

--- a/LiiteriDataAPI/Web.config
+++ b/LiiteriDataAPI/Web.config
@@ -14,9 +14,14 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" maxQueryStringLength="100000" />
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxQueryString="100000" />
+      </requestFiltering>
+    </security>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
