- Initial support for commute statistics - most fields in AreaTypeMappings now depend on use of string.Format for dynamically named table aliases - coordinates removed from StatisticsResult

--- a/LiiteriDataAPI/LiiteriDataAPI.csproj
+++ b/LiiteriDataAPI/LiiteriDataAPI.csproj
@@ -88,6 +88,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Binders\DateRangeModelBinder.cs" />
     <Compile Include="Binders\IntegerArrayModelBinder.cs" />
+    <Compile Include="Controllers\CommuteStatisticsController.cs" />
     <Compile Include="Controllers\IndicatorController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Controllers\VersionController.cs" />
