--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\AnySqlQuery.cs" />
     <Compile Include="Queries\AreaQuery.cs" />
+    <Compile Include="Queries\CommuteStatisticsQuery.cs" />
     <Compile Include="Queries\IndicatorQuery.cs" />
     <Compile Include="Queries\SqlQuery.cs" />
     <Compile Include="Queries\StatisticsQuery.cs" />
