--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\ImportTool\packages.config" />
-  <repository path="..\LiiteriDataAPI\packages.config" />
   <repository path="..\LiiteriDataTests\packages.config" />
   <repository path="..\LiiteriStatisticsAPI\packages.config" />
   <repository path="..\LiiteriStatisticsCore\packages.config" />
+  <repository path="..\LiiteriStatisticsDirectAPI\packages.config" />
+  <repository path="..\LiiteriStatisticsProxiedAPI\packages.config" />
+  <repository path="..\LiiteriStatisticsService\packages.config" />
+  <repository path="..\LiiteriStatisticsWMS\packages.config" />
 </repositories>
