--- a/LiiteriStatisticsService/Web.config
+++ b/LiiteriStatisticsService/Web.config
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
-
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+  </configSections>
+  <log4net configSource="log4net.config" />
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
     <add key="DbDataMarts" value="LiiteriDataMarts" />
