--- a/LiiteriStatisticsDirectAPI/LiiteriStatisticsDirectAPI.csproj
+++ b/LiiteriStatisticsDirectAPI/LiiteriStatisticsDirectAPI.csproj
@@ -154,7 +154,7 @@
   </Target>
   <PropertyGroup>
     <PreBuildEvent>subwcrev.exe "$(SolutionDir)." "$(ProjectDir)Properties\AssemblyInfo.cs.tmpl" "$(ProjectDir)Properties\AssemblyInfo.cs"
-xcopy "$(SolutionDir)\Data\AreaTypeMappings.xml" "$(ProjectDir)App_data"
+xcopy /Y "$(SolutionDir)\Data\AreaTypeMappings.xml" "$(ProjectDir)App_Data\"
 </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
