tweak log4net setup for LiiteriStatisticsService

--- a/LiiteriStatisticsService/Web.config
+++ b/LiiteriStatisticsService/Web.config
@@ -1,13 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  </configSections>
-  <log4net configSource="log4net.config" />
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
     <add key="DbDataMarts" value="LiiteriDataMarts" />
     <add key="DbDataIndex" value="LiiteriDataIndex" />
+
+    <!-- This key is needed when initializing log4net using AssemblyInfo.cs -->
+    <add key="log4net.config" value="log4net.config" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
