--- a/LiiteriStatisticsAPI/log4net.config
+++ b/LiiteriStatisticsAPI/log4net.config
@@ -14,7 +14,7 @@
   <appender name="SmtpAppender" type="log4net.Appender.SmtpAppender">
     <to value="urho.tamminen@sito.fi" />
     <from value="urho.tamminen@sito.fi" />
-    <subject value="Error report: LiiteriStatisticsDirectAPI (log4net)" />
+    <subject value="Error report: LiiteriStatisticsAPI (log4net)" />
     <smtpHost value="vps007" />
     <bufferSize value="512" />
     <lossy value="true" />
