Disable WCF usage by default

--- a/LiiteriStatisticsAPI/Web.config
+++ b/LiiteriStatisticsAPI/Web.config
@@ -15,7 +15,7 @@
     <add key="DbDataIndex" value="LiiteriDataIndex" />
 
     <!-- If set to true, uses LiiteriStatisticsService -->
-    <add key="UseWCF" value="true" />
+    <add key="UseWCF" value="false" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
