Implement GetVersion in Core, make it available via Service so that API can return both client and service versions (when Service is being used)

--- a/LiiteriStatisticsAPI/Web.config
+++ b/LiiteriStatisticsAPI/Web.config
@@ -98,6 +98,11 @@
                 bindingConfiguration="ServiceBinding"
                 contract="LiiteriStatisticsCore.Controllers.ICommuteStatisticsController"
                 name="StatisticsServiceEndpoint" />
+      <endpoint address="net.tcp://localhost/LiiteriStatisticsService/VersionService.svc"
+                binding="netTcpBinding"
+                bindingConfiguration="ServiceBinding"
+                contract="LiiteriStatisticsCore.Controllers.IVersionController"
+                name="StatisticsServiceEndpoint" />
     </client>
   </system.serviceModel>
 </configuration>
