--- a/LiiteriStatisticsService/Web.config
+++ b/LiiteriStatisticsService/Web.config
@@ -77,6 +77,15 @@
                   contract="LiiteriStatisticsCore.Controllers.ICommuteStatisticsController"/>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
+      <service name="LiiteriStatisticsCore.Controllers.VersionController"
+               behaviorConfiguration="MyBehaviour">
+        <endpoint address=""
+                  behaviorConfiguration="AsyncStreaming"
+                  binding="netTcpBinding"
+                  bindingConfiguration="NetTcpConfig"
+                  contract="LiiteriStatisticsCore.Controllers.IVersionController"/>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+      </service>
     </services>
   </system.serviceModel>
   <system.webServer>
