--- a/LiiteriStatisticsService/LiiteriStatisticsService.csproj
+++ b/LiiteriStatisticsService/LiiteriStatisticsService.csproj
@@ -68,12 +68,16 @@
     <Content Include="CommuteStatisticsService.svc" />
     <Content Include="IndicatorService.svc" />
     <Content Include="StatisticsService.svc" />
+    <Content Include="VersionService.svc" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VersionService.svc.cs">
+      <DependentUpon>VersionService.svc</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
