fix invalid service class reference in Web.config

--- a/LiiteriStatisticsService/Web.config
+++ b/LiiteriStatisticsService/Web.config
@@ -75,7 +75,7 @@
                   contract="LiiteriStatisticsCore.Controllers.ICommuteStatisticsController"/>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
-      <service name="LiiteriStatisticsCore.Controllers.VersionController"
+      <service name="LiiteriStatisticsService.VersionService"
                behaviorConfiguration="MyBehaviour">
         <endpoint address=""
                   behaviorConfiguration="AsyncStreaming"
