use log4net to log exceptions in WCF service

--- a/LiiteriStatisticsService/Web.config
+++ b/LiiteriStatisticsService/Web.config
@@ -35,10 +35,12 @@
         <behavior name="MyBehaviour">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="false" />
           <serviceDebug includeExceptionDetailInFaults="true" />
+          <log4net/>
         </behavior>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+          <log4net/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -85,6 +87,14 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
+
+    <extensions>
+      <behaviorExtensions>
+        <add name="log4net"
+             type="LiiteriStatisticsService.Log4NetBehaviorExtensionElement, LiiteriStatisticsService" />
+      </behaviorExtensions>
+    </extensions>
+
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
@@ -97,19 +107,4 @@
   <connectionStrings>
     <add name="LiiteriDB" connectionString="data source=vps009.sitois.local\kotidw_dev;persist security info=True;user id=liiteri;password=li7jbbGG14;initial catalog=LiiteriDataMarts;MultipleActiveResultSets=True" />
   </connectionStrings>
-  <!--
-  <system.diagnostics>
-    <sources>
-      <source name="System.ServiceModel"
-              switchValue="Error,ActivityTracing"
-              propagateActivity="true">
-        <listeners>
-          <add name="traceListener"
-               type="System.Diagnostics.XmlWriterTraceListener"
-               initializeData="LFFServicesHost.svclog" />
-        </listeners>
-      </source>
-    </sources>
-  </system.diagnostics>
-  -->
 </configuration>
