--- a/LiiteriStatisticsService/LiiteriStatisticsService.csproj
+++ b/LiiteriStatisticsService/LiiteriStatisticsService.csproj
@@ -75,6 +75,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ErrorHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VersionService.svc.cs">
       <DependentUpon>VersionService.svc</DependentUpon>
