--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Controllers\IndicatorController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Controllers\VersionController.cs" />
+    <Compile Include="Factories\AnnotationFactory.cs" />
     <Compile Include="Factories\AreaFactory.cs" />
     <Compile Include="Factories\AreaTypeFactory.cs">
       <SubType>Code</SubType>
@@ -70,6 +71,7 @@
     <Compile Include="Factories\TimePeriodFactory.cs" />
     <Compile Include="Infrastructure\Parameter.cs" />
     <Compile Include="Infrastructure\ParameterCollection.cs" />
+    <Compile Include="Models\Annotation.cs" />
     <Compile Include="Models\Area.cs" />
     <Compile Include="Models\AreaType.cs">
       <SubType>Code</SubType>
