- replace DerivedDivided with a more complicated query to get proper results - move sql strings to template files - rework AreaTypeMappings to have two different joins for each areatype - update pre-build scripts to copy entire Data/ directory

--- a/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
+++ b/LiiteriStatisticsCore/LiiteriStatisticsCore.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Util\DebugOutput.cs" />
     <Compile Include="Util\Range.cs" />
     <Compile Include="Util\AreaTypeMappings.cs" />
+    <Compile Include="Util\TemplateCollection.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
