fix mistake in pre-build script

--- a/LiiteriStatisticsAPI/LiiteriStatisticsAPI.csproj
+++ b/LiiteriStatisticsAPI/LiiteriStatisticsAPI.csproj
@@ -156,7 +156,7 @@
   <PropertyGroup>
     <PreBuildEvent>subwcrev.exe "$(SolutionDir)." "$(ProjectDir)Properties\AssemblyInfo.cs.tmpl" "$(ProjectDir)Properties\AssemblyInfo.cs"
 
-(robocopy /NJH /NJS /FP /NDL /NP /L /E /V "$(SolutionDir)Data" "$(ProjectDir)App_Data") ^&amp; exit 0</PreBuildEvent>
+(robocopy /NJH /NJS /FP /NDL /NP /E /V "$(SolutionDir)Data" "$(ProjectDir)App_Data") ^&amp; exit 0</PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
